--- a/prime_home/templates/prime_home/navigation_header.html
+++ b/prime_home/templates/prime_home/navigation_header.html
@@ -16,7 +16,7 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link px-lg-3 py-lg-4 dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                <a class="nav-link px-lg-3 py-lg-4 " href="#" id="nav_services"
                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item">Learn Korean</a>
@@ -24,7 +24,7 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
                 </div>
             </li>
             <li class="nav-item dropdown"> 
-                <a class="nav-link px-lg-3 py-lg-4 dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Testimonies</a> 
+                <a class="nav-link px-lg-3 py-lg-4" id="nav_testimonies" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Testimonies</a> 
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
                     <a id="btn_proof_of_gallery" class="dropdown-item">Our Proof of Gallery</a>
                     <a id="btn_orientation" class="dropdown-item">Orientation</a>
