--- a/prime_home/templates/prime_home/index/services_section.html
+++ b/prime_home/templates/prime_home/index/services_section.html
@@ -1,7 +1,7 @@
 <svg viewBox="0 0 1440 134" preserveAspectRatio="none" fill="currentColor" version="1.1" xmlns="http://www.w3.org/2000/svg" class="bg-dark d-block text-white" width="100%" height="80">
     <path d="M 0 0 H 1440 V 60 C 854 276 596 -66 0 60 V 0 Z"/>
 </svg>
-<section class="bg-dark pb-5 pt-5 text-white"> 
+<section class="bg-dark pb-5 pt-5 text-white" id="services_section"> 
     <div class="container"> 
         <div class="align-items-center mb-3 row"> 
             <div class="col-xl-3 pb-4 pt-4"> 
