--- a/prime_admin/templates/lms/settings_sidebar.html
+++ b/prime_admin/templates/lms/settings_sidebar.html
@@ -106,6 +106,21 @@
                         Orientators
                     </a>
                 </li>
+                <li>
+                    <a id="li_pages" href="#">
+                        <i class="metismenu-icon pe-7s-file icon"></i>
+                        Pages
+                        <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+                    </a>
+                    <ul>
+                        <li>
+                            <a id="li_batch_numbers" href="{{url_for('lms.pages_home')}}">
+                                <i class="metismenu-icon"></i>
+                                Home
+                            </a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
