feat: static to s3

--- a/prime_home/templates/prime_home/pre_register.html
+++ b/prime_home/templates/prime_home/pre_register.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="signup-content">
                 <div class="signup-img">
-                    <img src="{{ url_for('prime_home.static', filename='img/pre_register.jpg') }}" alt="">
+                    <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/pre_register.jpg" alt="">
                 </div>
                 <div class="signup-form">
                     <form action="{{url_for('prime_home.pre_register')}}" method="POST" class="register-form" id="register-form">
