--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -131,21 +131,21 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 		<div class="tree">
 			<ul> <!--1-->					
 				<li> 
-					<a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/ceo.jpg')}}"><span><b>JONWEL SUPRESENCIA</b><br>C.E.O</span></a>
+					<a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/ceo.jpg"><span><b>JONWEL SUPRESENCIA</b><br>C.E.O</span></a>
 					
 				</li>			
 				<ul><!--2-->	
-					<li> <a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/admi_head.jpg')}}"><span><b>SALOME SUPRESENCIA</b><br>VICE PRESIDENT</span></a>
+					<li> <a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/admi_head.jpg"><span><b>SALOME SUPRESENCIA</b><br>VICE PRESIDENT</span></a>
 						
 					</li>	
 					<ul><!--3-->	
-						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_1.jpg')}}"><span><b>VINCENT CORONADO </b><br>VP|BRANCH MANAGER</span></a>
+						<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/vp_bmanager_1.jpg"><span><b>VINCENT CORONADO </b><br>VP|BRANCH MANAGER</span></a>
 							
 							</li>	
-						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_accnt_head.jpg')}}"><span><b>HAIREL SUPRESENCIA </b><br>VP|BRANCH MANAGER</span></a>
+						<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/sec_accnt_head.jpg"><span><b>HAIREL SUPRESENCIA </b><br>VP|BRANCH MANAGER</span></a>
 							
 						</li>			
-						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/marketing_NARGEO.jpg')}}"><span><b>NARGEO S. GERONA </b><br>MARKETING MANAGER<br>TACLOBAN BRANCH</span></a>
+						<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/marketing_NARGEO.jpg"><span><b>NARGEO S. GERONA </b><br>MARKETING MANAGER<br>TACLOBAN BRANCH</span></a>
 							
 						</li>
 						<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/organization/FIONA ANGEL ARAIS-Manager-Bohol branch-crop.jpeg"><span><b>FIONA ANGEL ARAIS </b><br>MANAGER<br>BOHOL BRANCH</span></a>
@@ -155,7 +155,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 							
 						</li>
 						<ul><!--4-->	
-						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_1.jpg')}}"><span><b> CRISTINE DAEL </b><br>TEACHER|SECRETARY</span></a>
+						<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/sec_teacher_1.jpg"><span><b> CRISTINE DAEL </b><br>TEACHER|SECRETARY</span></a>
 							<div class="content">  
 							<p> Welcome students! <br> We're so glad you're here.<br><br>
 							Allow me to introduce myself. I am Teacher Cristine and I am so excited to share my expertise and be able to inspire you.<br><br>		
@@ -164,7 +164,7 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 							Come and enjoy my class! Be ready for the new version of yourselves. <br> See you soon!
 							</p></div>																
 						</li>			
-						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_2.jpg')}}"><span> <b>MAEVELLYN OLESCO</b><br>TEACHER|SECRETARY</span></a>
+						<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/sec_teacher_2.jpg"><span> <b>MAEVELLYN OLESCO</b><br>TEACHER|SECRETARY</span></a>
 							<div class="content">  
 							<p> Hello there, <br>
 							This is teacher Maevellyn, I am so excited to have you in my class. As an educator I am grateful to be one of the tools of your success. I assure that our learning process will be a good foundation and fun. <br> <br>	
@@ -174,10 +174,10 @@ We are committed to assisting Filipinos in passing the Korean language proficien
 						</li>	
 					</ul><!--4-->
 						<ul><!--5-->
-							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_3.jpg')}}"><span> <b>ROYCE MARIE LABIAN </b><br>TEACHER</span></a>
+							<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/teacher_3.jpg"><span> <b>ROYCE MARIE LABIAN </b><br>TEACHER</span></a>
 								
 							</li>
-							<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_marivie_hellena.jpg')}}"><span> <b>MARIVIE HELLENA </b><br>KOREAN LANGUAGE TEACHER<br>EPS-KLT PASSER<br>PALAWAN BRANCH</span></a>
+							<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/teacher_marivie_hellena.jpg"><span> <b>MARIVIE HELLENA </b><br>KOREAN LANGUAGE TEACHER<br>EPS-KLT PASSER<br>PALAWAN BRANCH</span></a>
 								
 							</li>
                             <li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/organization/CECILE ANODAN-TEACHER-BUTUAN BRANCH.jpeg"><span><b>CECILE ANODAN </b><br>TEACHER<br>BUTUAN BRANCH</span></a>
@@ -188,20 +188,20 @@ We are committed to assisting Filipinos in passing the Korean language proficien
                             </li>
 						</ul><!--5-->
 							<ul><!--6-->
-								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <br>SECRETARY</span></a>
+								<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/prime_logo.jpg"><span> <br>SECRETARY</span></a>
 									
 								</li>
-								<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <br>SECRETARY</span></a>
+								<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/prime_logo.jpg"><span> <br>SECRETARY</span></a>
 									
 								</li>
 							</ul><!--6-->
 								<ul><!--7-->
-									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span>  <br>MARKETING STAFF</span></a></li>
-									<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span>  <br>MARKETING STAFF</span></a></li>
+									<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/prime_logo.jpg"><span>  <br>MARKETING STAFF</span></a></li>
+									<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/prime_logo.jpg"><span>  <br>MARKETING STAFF</span></a></li>
 								</ul><!--7-->
 									<ul><!--8-->
-										<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/tricities.jpg')}}"><span> <b>TRICITIES </b><br>BOOKKEPER</span></a></li>
-										<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>LIKES TEAM </b><br>IT</span></a></li>
+										<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/tricities.jpg"><span> <b>TRICITIES </b><br>BOOKKEPER</span></a></li>
+										<li><a href="#"><img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/organization/prime_logo.jpg"><span> <b>LIKES TEAM </b><br>IT</span></a></li>
 									</ul><!--8-->	
 					</ul><!--3-->						
 				</ul> <!--2-->													
