--- a/prime_home/templates/prime_home/index/testimonials_section.html
+++ b/prime_home/templates/prime_home/index/testimonials_section.html
@@ -7,7 +7,7 @@
                 <div class="carousel-item active">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/DIONESIO NATINGGA.jpg')}}"
+                            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/student_testimonies_img/DIONESIO NATINGGA.jpg"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -27,7 +27,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/LESLIE GALENZOGA.jpeg')}}"
+                            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/student_testimonies_img/LESLIE GALENZOGA.jpeg"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -50,7 +50,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/MAR JUN AMISTOSO.jpeg')}}"
+                            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/student_testimonies_img/MAR JUN AMISTOSO.jpeg"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -69,7 +69,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/SESENIO MONTEROLA JR.jpeg')}}"
+                            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/student_testimonies_img/SESENIO MONTEROLA JR.jpeg"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -88,7 +88,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/RONALD A. GALLERA.jpeg')}}"
+                            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/student_testimonies_img/RONALD A. GALLERA.jpeg"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -107,7 +107,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/ROMMEL ABELLA.jpeg')}}"
+                            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/student_testimonies_img/ROMMEL ABELLA.jpeg"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -126,7 +126,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/KRISTOVAL BUENO.jpeg')}}"
+                            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/student_testimonies_img/KRISTOVAL BUENO.jpeg"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
@@ -145,7 +145,7 @@
                 <div class="carousel-item">
                     <div class="align-items-center row">
                         <div class="col-lg-4 pb-3 pt-3 text-center">
-                            <img src="{{url_for('prime_home.static', filename='img/student_testimonies_img/JOEY CANALES.jpg')}}"
+                            <img src="https://primeklcbucket.s3.ap-southeast-1.amazonaws.com/landing_page/student_testimonies_img/JOEY CANALES.jpg"
                                 class="img-fluid rounded-circle">
                         </div>
                         <div class="col-lg-8 pb-3 pt-3">
