Our testimonies gallery

--- a/prime_home/templates/prime_home/navigation_header_2.html
+++ b/prime_home/templates/prime_home/navigation_header_2.html
@@ -15,15 +15,14 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
                 <a href="{{ url_for('prime_home.about') }}" class="nav-link px-lg-3 py-lg-4" aria-haspopup="true" aria-expanded="false">About Us</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link px-lg-3 py-lg-4 dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                <a class="nav-link px-lg-3 py-lg-4" href="{{ url_for('prime_home.index') }}#services_section" aria-haspopup="true" aria-expanded="false">Services</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item">Learn Korean</a>
                     <a class="dropdown-item">Work in South Korea</a>
                 </div>
             </li>
             <li class="nav-item dropdown"> 
-                <a class="nav-link px-lg-3 py-lg-4 dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Testimonies</a> 
+                <a class="nav-link px-lg-3 py-lg-4" href="{{ url_for('prime_home.testimonies') }}" aria-haspopup="true" aria-expanded="false">Testimonies</a> 
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"> 
                     <a href="{{url_for('prime_home.testimonies')}}" class="dropdown-item">Our Proof of Gallery</a>
                     <a href="{{url_for('prime_home.testimonies')}}" class="dropdown-item">Orientation</a>
