Increase featured-carousel speed

--- a/prime_home/templates/prime_home/base.html
+++ b/prime_home/templates/prime_home/base.html
@@ -54,7 +54,7 @@
 
     <script src="{{ url_for('prime_home.static', filename='js/popper.js') }}"></script>
     <script src="{{ url_for('prime_home.static', filename='js/owl.carousel.min.js') }}"></script>
-    <script src="{{ url_for('prime_home.static', filename='js/carousel.js') }}"></script>
+    <script src="{{ url_for('prime_home.static', filename='js/carousel.js') }}?v=102720241"></script>
 
 
     <script type='text/javascript'>
