feat: Class Schedules settings

--- a/prime_admin/templates/lms/settings_sidebar.html
+++ b/prime_admin/templates/lms/settings_sidebar.html
@@ -107,6 +107,12 @@
                     </a>
                 </li>
                 <li>
+                    <a id="li_class_schedule" href="{{url_for('lms.class_schedule_settings')}}" class="">
+                        <i class="metismenu-icon pe-7s-pen icon-gradient bg-premium-dark" aria-hidden="true"></i>
+                        Class Schedule
+                    </a>
+                </li>
+                <li>
                     <a id="li_pages" href="#">
                         <i class="metismenu-icon pe-7s-file icon"></i>
                         Pages
